--- a/easy_study/pubspec.yaml
+++ b/easy_study/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   sqflite: any
   fluttertoast: any
   flutter_hsvcolor_picker: ^0.0.1
+  flutter_redux: ^0.5.3
+
 
 dev_dependencies:
   flutter_test:
