--- a/easy_study/pubspec.yaml
+++ b/easy_study/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   fluttertoast: any
   flutter_hsvcolor_picker: ^0.0.1
   flutter_redux: ^0.5.3
+  add_2_calendar: ^1.2.2
 
 
 dev_dependencies:
