--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   fluttertoast: any
   flutter_hsvcolor_picker: ^0.0.1
   flutter_redux: ^0.5.3
-
+  date_format: ^1.0.6
 
 dev_dependencies:
   flutter_test:
