--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   add_2_calendar: ^1.2.2
   date_format: ^1.0.6
   photo_view:
+  page_view_indicators:
 
 dev_dependencies:
   flutter_test:
