--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   date_format: ^1.0.6
   photo_view:
   page_view_indicators:
+  flutter_datetime_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
