--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ jobs:
           - android-28
       jdk: oraclejdk8
       before_script:
-        - git clone https://github.com/flutter/flutter.git ../flutter -b stable --depth 1
+        - git clone https://github.com/flutter/flutter.git ../flutter -b beta --depth 1
         - yes|/usr/local/android-sdk/tools/bin/sdkmanager --update
         - yes|../flutter/bin/flutter doctor --android-licenses
       script:
@@ -52,7 +52,7 @@ jobs:
     #        - brew install --HEAD libimobiledevice
     #        - brew install ideviceinstaller
     #        - brew install ios-deploy
-    #        - git clone https://github.com/flutter/flutter.git ../flutter -b stable --depth 1
+    #        - git clone https://github.com/flutter/flutter.git ../flutter -b beta --depth 1
     #        - ../flutter/bin/flutter doctor
     #      script:
     #        - ../flutter/bin/flutter -v build ios --no-codesign
